# keyple-plugin-pcsc-cpp-lib

./: CMakeLists.txt  NOTICE.md  PUBLISHERS.yml  README.md  _config.yml  index.md  list_versions.md
.github/scripts/: patch_doxyfile.sh  prepare_doxygen.sh
2.0.0/: _abstract_pcsc_plugin_adapter_8cpp.html  _abstract_pcsc_plugin_adapter_8cpp__incl.map  _abstract_pcsc_plugin_adapter_8cpp__incl.md5  _abstract_pcsc_plugin_adapter_8cpp_source.html  _abstract_pcsc_plugin_adapter_8h.html  _abstract_pcsc_plugin_adapter_8h__incl.map  _abstract_pcsc_plugin_adapter_8h__incl.md5  _abstract_pcsc_plugin_adapter_8h_source.html  _abstract_pcsc_reader_adapter_8cpp.html  _abstract_pcsc_reader_adapter_8cpp__incl.map  _abstract_pcsc_reader_adapter_8cpp__incl.md5  _abstract_pcsc_reader_adapter_8cpp_source.html  _abstract_pcsc_reader_adapter_8h.html  _abstract_pcsc_reader_adapter_8h__dep__incl.map  _abstract_pcsc_reader_adapter_8h__incl.map  _abstract_pcsc_reader_adapter_8h__incl.md5  _abstract_pcsc_reader_adapter_8h_source.html  _card_exception_8h.html  _card_exception_8h__dep__incl.md5  _card_exception_8h__incl.md5  _card_exception_8h_source.html  _card_terminal_8cpp.html  _card_terminal_8cpp__incl.map  _card_terminal_8cpp__incl.md5  _card_terminal_8cpp_source.html  _card_terminal_8h.html  _card_terminal_8h__dep__incl.md5  _card_terminal_8h__incl.map  _card_terminal_8h__incl.md5  _card_terminal_8h_source.html  _card_terminal_exception_8h.html  _card_terminal_exception_8h__dep__incl.map  _card_terminal_exception_8h_source.html  _keyple_plugin_pcsc_export_8h.html  _keyple_plugin_pcsc_export_8h__dep__incl.map  _keyple_plugin_pcsc_export_8h_source.html  _pcsc_plugin_8h.html  _pcsc_plugin_8h__incl.map  _pcsc_plugin_8h__incl.md5  _pcsc_plugin_8h_source.html  (+123 more)
2.0.0/search/: all_0.js  all_5.js  all_9.js  all_a.js  all_b.js  all_e.js  classes_3.js  classes_4.js  functions_1.js  functions_a.js  functions_b.js  functions_e.js  variables_0.js
2.1.0.2-SNAPSHOT/: _abstract_pcsc_plugin_adapter_8cpp.html  _abstract_pcsc_plugin_adapter_8cpp__incl.map  _abstract_pcsc_plugin_adapter_8cpp_source.html  _abstract_pcsc_plugin_adapter_8h.html  _abstract_pcsc_plugin_adapter_8h__dep__incl.map  _abstract_pcsc_plugin_adapter_8h__dep__incl.md5  _abstract_pcsc_plugin_adapter_8h__incl.map  _abstract_pcsc_plugin_adapter_8h__incl.md5  _abstract_pcsc_plugin_adapter_8h_source.html  _abstract_pcsc_reader_adapter_8cpp.html  _abstract_pcsc_reader_adapter_8cpp__incl.md5  _abstract_pcsc_reader_adapter_8cpp_source.html  _abstract_pcsc_reader_adapter_8h.html  _abstract_pcsc_reader_adapter_8h__dep__incl.md5  _abstract_pcsc_reader_adapter_8h__incl.map  _abstract_pcsc_reader_adapter_8h__incl.md5  _abstract_pcsc_reader_adapter_8h_source.html  _card_exception_8h.html  _card_exception_8h__incl.map  _card_exception_8h_source.html  _card_terminal_8cpp.html  _card_terminal_8cpp_source.html  _card_terminal_8h.html  _card_terminal_8h__incl.map  _card_terminal_8h_source.html  _card_terminal_exception_8h.html  _card_terminal_exception_8h__incl.map  _card_terminal_exception_8h__incl.md5  _card_terminal_exception_8h_source.html  _keyple_plugin_pcsc_export_8h.html  _keyple_plugin_pcsc_export_8h__dep__incl.md5  _keyple_plugin_pcsc_export_8h_source.html  _pcsc_plugin_8h.html  _pcsc_plugin_8h__dep__incl.map  _pcsc_plugin_8h__dep__incl.md5  _pcsc_plugin_8h_source.html  _pcsc_plugin_adapter_8cpp.html  _pcsc_plugin_adapter_8cpp__incl.map  _pcsc_plugin_adapter_8cpp__incl.md5  _pcsc_plugin_adapter_8cpp_source.html  (+148 more)
2.1.0.2-SNAPSHOT/search/: all_1.js  all_11.js  all_2.js  all_6.js  all_7.js  all_8.js  all_d.js  all_e.js  classes_1.js  classes_2.js  enumvalues_0.js  files_0.js  files_2.js  files_3.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_c.js  functions_d.js  namespaces_0.js  searchdata.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js
2.1.1-SNAPSHOT/: _abstract_pcsc_plugin_adapter_8cpp.html  _abstract_pcsc_plugin_adapter_8cpp__incl.md5  _abstract_pcsc_plugin_adapter_8cpp_source.html  _abstract_pcsc_plugin_adapter_8h.html  _abstract_pcsc_plugin_adapter_8h_source.html  _abstract_pcsc_reader_adapter_8cpp.html  _abstract_pcsc_reader_adapter_8cpp__incl.map  _abstract_pcsc_reader_adapter_8cpp_source.html  _abstract_pcsc_reader_adapter_8h.html  _abstract_pcsc_reader_adapter_8h_source.html  _card_exception_8h.html  _card_exception_8h__dep__incl.map  _card_exception_8h_source.html  _card_terminal_8cpp.html  _card_terminal_8cpp__incl.map  _card_terminal_8cpp__incl.md5  _card_terminal_8cpp_source.html  _card_terminal_8h.html  _card_terminal_8h__dep__incl.map  _card_terminal_8h__incl.md5  _card_terminal_8h_source.html  _card_terminal_exception_8h.html  _card_terminal_exception_8h__dep__incl.md5  _card_terminal_exception_8h_source.html  _keyple_plugin_pcsc_export_8h.html  _keyple_plugin_pcsc_export_8h_source.html  _pcsc_plugin_8h.html  _pcsc_plugin_8h_source.html  _pcsc_plugin_adapter_8cpp.html  _pcsc_plugin_adapter_8cpp_source.html  _pcsc_plugin_adapter_8h.html  _pcsc_plugin_adapter_8h__dep__incl.md5  _pcsc_plugin_adapter_8h__incl.map  _pcsc_plugin_adapter_8h_source.html  _pcsc_plugin_factory_8h.html  _pcsc_plugin_factory_8h_source.html  _pcsc_plugin_factory_adapter_8cpp.html  _pcsc_plugin_factory_adapter_8cpp__incl.md5  _pcsc_plugin_factory_adapter_8cpp_source.html  _pcsc_plugin_factory_adapter_8h.html  (+107 more)
src/main/: AbstractPcscPluginAdapter.cpp  AbstractPcscPluginAdapter.h  AbstractPcscReaderAdapter.cpp  AbstractPcscReaderAdapter.h  CMakeLists.txt  KeyplePluginPcscExport.h  PcscPlugin.h  PcscPluginAdapter.cpp  PcscPluginAdapter.h  PcscPluginFactory.h  PcscPluginFactoryAdapter.cpp  PcscPluginFactoryAdapter.h  PcscPluginFactoryBuilder.cpp  PcscPluginFactoryBuilder.h  PcscReader.cpp  PcscReader.h  PcscReaderAdapter.cpp  PcscReaderAdapter.h  PcscSupportedContactProtocol.cpp  PcscSupportedContactProtocol.h  PcscSupportedContactlessProtocol.cpp  PcscSupportedContactlessProtocol.h
src/main/cpp/: CardTerminal.cpp  CardTerminal.h
src/main/cpp/exception/: CardException.h  CardTerminalException.h
(+14 files in other folders)
